rpi-cluster/orchestration/netpols/blog/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tunnel-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cloudflare-tunnel
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cloudflare-tunnel
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cloudflare-tunnel
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cloudflare-tunnel
    ports:
    - port: 8443
